tests/fixtures/invalid/pow_int_bool_str.py
# Cannot call pow() with Int, Bool, Str
x = pow(1, True, "hello")
